observability/grafana/manifests/embed-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-embed
  namespace: grafana
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.priority: "100"
spec:
  ingressClassName: traefik
  rules:
  - host: grafana0213.kro.kr
    http:
      paths:
      - path: /d-solo
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 80
      - path: /public
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 80
  tls:
  - hosts:
    - grafana0213.kro.kr
    secretName: grafana-tls
